--- a/about.html
+++ b/about.html
@@ -268,21 +268,21 @@ https://www.simmaps.com
                         </div>
 
                         <div class="col-lg-3 col-md-6 col-12">
-                            <img src="images/teams/sir-irfan.jpg" class="team-image img-fluid">
+                            <img src="images/teams/sir-imran-multan.jpg" class="team-image img-fluid">
                         </div>
 
                         <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-lg-center mt-4 mt-lg-0 mt-md-0">
                             <div class="team-info mx-auto mx-lg-0">
-                                <h4 class="mb-2">Sir Zahid</h4>
+                                <h4 class="mb-2">Sir Imran</h4>
 
-                                <p>Sir Zahid, my esteemed teacher in WinForms, C#, and VB.NET, is a guiding force in my journey of programming proficiency. With a wealth of experience and expertise, he effortlessly navigates the intricacies of these languages, making complex concepts comprehensible. I am sincerely thankful for Sir Zahid's dedication to imparting invaluable knowledge, shaping my understanding and skills in WinForms, C#, and VB.NET.</p>
+                                <p>Sir Imran, my esteemed teacher in WinForms, C#, and VB.NET, is a guiding force in my journey of programming proficiency. With a wealth of experience and expertise, he effortlessly navigates the intricacies of these languages, making complex concepts comprehensible. I am sincerely thankful for Sir Imran's dedication to imparting invaluable knowledge, shaping my understanding and skills in WinForms, C#, and VB.NET.</p>
 
                                 <div class="border-top mt-3 pt-3">
                                     <p class="d-flex mb-0">
                                         <i class="bi-whatsapp me-2"></i>
 
-                                        <a href="tel: 92-0301-7519150">
-                                            92-0301-7519150
+                                        <a href="tel: 92-0333-7629180">
+                                            92-0333-7629180
                                         </a>
                                     </p>
                                 </div>
