--- a/services.html
+++ b/services.html
@@ -194,7 +194,7 @@ https://www.simmaps.com
                                     <div class="col-lg-7 col-md-7 col-12 d-flex align-items-center">
                                         <div class="services-info mt-4 mt-lg-0 mt-md-0">
                                             <h4 class="services-title mb-1 mb-lg-2">
-                                                <a class="services-title-link" href="services-detail.html">image background removal</a>
+                                                <a class="services-title-link" href="https://pic-bg-remover.streamlit.app/">image background removal</a>
                                             </h4>
 
                                             <p>Effortlessly enhance visuals with our advanced Image Background Removal tool, using precise automation for a professional finish.</p>
