--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ https://www.simmaps.com
                                 <li><a class="dropdown-item" href="coming-soon.html">Tech Tools</a></li>
 
                                 <li><a class="dropdown-item" href="page-404.html">Page 404</a></li>
+
+				<li><a class="dropdown-item" href="video.html">Study Material</a></li>    
                             </ul>
                         </li>
 
