--- a/video.html
+++ b/video.html
@@ -74,7 +74,7 @@ https://www.simmaps.com
                                 <ol class="breadcrumb justify-content-center">
                                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
 
-                                    <li class="breadcrumb-item active" aria-current="page">Page 404</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Study Material</li>
                                 </ol>
                             </nav>
                     </div>
