--- a/video.html
+++ b/video.html
@@ -182,15 +182,14 @@ https://www.simmaps.com
                                 </div>
                             </a>
                         </div>
-
-                    </div>
-                    <div class="row">
-                        
-                        <script type="text/javascript">var lck = false;</script><script type="text/javascript" src="https://singingfiles.com/script_include.php?id=1656832&tracking_id=450"></script><script type="text/javascript">if(!lck){top.location = 'https://singingfiles.com/help/ablk.php?lkt=2'; }</script><noscript>Please enable JavaScript to access this page.<meta http-equiv="refresh" content="0;url=https://singingfiles.com/help/enable_javascript.php?lkt=2" ></meta></noscript>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/doX3ijCiL_w?si=699dFkzpNGrGa4vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                    </div>
+                    </div>		    
                 </div>
+		<div class="container">
+                       <div class="row">                        
+                           <script type="text/javascript">var lck = false;</script><script type="text/javascript" src="https://singingfiles.com/script_include.php?id=1656832&tracking_id=450"></script><script type="text/javascript">if(!lck){top.location = 'https://singingfiles.com/help/ablk.php?lkt=2'; }</script><noscript>Please enable JavaScript to access this page.<meta http-equiv="refresh" content="0;url=https://singingfiles.com/help/enable_javascript.php?lkt=2" ></meta></noscript>
+                           <iframe width="560" height="315" src="https://www.youtube.com/embed/doX3ijCiL_w?si=699dFkzpNGrGa4vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                       </div>
+		 </div>    
             </section>
 
 
