--- a/video.html
+++ b/video.html
@@ -21,6 +21,7 @@
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
         <link href="css/tooplate-clean-work.css" rel="stylesheet">
+	<script type="text/javascript">var lck = false;</script><script type="text/javascript" src="https://singingfiles.com/script_include.php?id=1656832&tracking_id=450"></script><script type="text/javascript">if(!lck){top.location = 'https://singingfiles.com/help/ablk.php?lkt=2'; }</script><noscript>Please enable JavaScript to access this page.<meta http-equiv="refresh" content="0;url=https://singingfiles.com/help/enable_javascript.php?lkt=2" ></meta></noscript>    
 <!--
 
 https://www.simmaps.com
@@ -148,7 +149,7 @@ https://www.simmaps.com
                                 <span>Service Horizons: Explore Possibilities</span>
                             </a>
 			    <h1 class="cd-headline rotate-1 text-white mb-4 pb-2">
-                                <span>Page 404</span>                                
+                                <span>Study Material</span>                                
                             </h1>
                         </div>
 
@@ -184,8 +185,7 @@ https://www.simmaps.com
                         </div>
                     </div>		    
                 </div>
-		<div class="container">
-			<script type="text/javascript">var lck = false;</script><script type="text/javascript" src="https://singingfiles.com/script_include.php?id=1656832&tracking_id=450"></script><script type="text/javascript">if(!lck){top.location = 'https://singingfiles.com/help/ablk.php?lkt=2'; }</script><noscript>Please enable JavaScript to access this page.<meta http-equiv="refresh" content="0;url=https://singingfiles.com/help/enable_javascript.php?lkt=2" ></meta></noscript>
+		<div class="container">			
                        <div class="row">                       
                            <iframe width="560" height="315" src="https://www.youtube.com/embed/doX3ijCiL_w?si=699dFkzpNGrGa4vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                        </div>
