--- a/video.html
+++ b/video.html
@@ -169,6 +169,7 @@ https://www.simmaps.com
                             <h3>Study Material</h3>
 
                             <p>Watch To Learn.</p>
+			    <p> <iframe width="560" height="315" src="https://www.youtube.com/embed/doX3ijCiL_w?si=699dFkzpNGrGa4vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </p>	
 
                             <a class="custom-btn btn button button--atlas mt-4" href="index.html">
                                 <span>Back to Home</span>
@@ -187,7 +188,7 @@ https://www.simmaps.com
                 </div>
 		<div class="container">			
                        <div class="row">                       
-                           <iframe width="560" height="315" src="https://www.youtube.com/embed/doX3ijCiL_w?si=699dFkzpNGrGa4vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                          
                        </div>
 		 </div>    
             </section>
