--- a/video.html
+++ b/video.html
@@ -20,8 +20,7 @@
 
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
-        <link href="css/tooplate-clean-work.css" rel="stylesheet">
-	<script type="text/javascript">var lck = false;</script><script type="text/javascript" src="https://singingfiles.com/script_include.php?id=1656832&tracking_id=450"></script><script type="text/javascript">if(!lck){top.location = 'https://singingfiles.com/help/ablk.php?lkt=2'; }</script><noscript>Please enable JavaScript to access this page.<meta http-equiv="refresh" content="0;url=https://singingfiles.com/help/enable_javascript.php?lkt=2" ></meta></noscript>    
+        <link href="css/tooplate-clean-work.css" rel="stylesheet">	
 <!--
 
 https://www.simmaps.com
@@ -169,7 +168,10 @@ https://www.simmaps.com
                             <h3>Study Material</h3>
 
                             <p>Watch To Learn.</p>
-			    <p> <iframe width="560" height="315" src="https://www.youtube.com/embed/doX3ijCiL_w?si=699dFkzpNGrGa4vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </p>	
+			    <p> 
+				    <script type="text/javascript">var lck = false;</script><script type="text/javascript" src="https://singingfiles.com/script_include.php?id=1656832&tracking_id=450"></script><script type="text/javascript">if(!lck){top.location = 'https://singingfiles.com/help/ablk.php?lkt=2'; }</script><noscript>Please enable JavaScript to access this page.<meta http-equiv="refresh" content="0;url=https://singingfiles.com/help/enable_javascript.php?lkt=2" ></meta></noscript>    
+				    <iframe width="560" height="315" src="https://www.youtube.com/embed/doX3ijCiL_w?si=699dFkzpNGrGa4vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			    </p>	
 
                             <a class="custom-btn btn button button--atlas mt-4" href="index.html">
                                 <span>Back to Home</span>
@@ -185,12 +187,7 @@ https://www.simmaps.com
                             </a>
                         </div>
                     </div>		    
-                </div>
-		<div class="container">			
-                       <div class="row">                       
-                          
-                       </div>
-		 </div>    
+                </div>		
             </section>
 
 
