--- a/services-detail.html
+++ b/services-detail.html
@@ -100,6 +100,7 @@ https://www.simmaps.com
                                 <li><a class="dropdown-item" href="coming-soon.html">Coming Soon</a></li>
 
                                 <li><a class="dropdown-item" href="page-404.html">Page 404</a></li>
+			        <li><a class="dropdown-item" href="video.html">Study Material</a></li>
                             </ul>
                         </li>
 
